# AI-memory-

./: Dockerfile  README.md  __init__.py  config.py  config.yaml  logging.yaml  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  unified_memory.py
.github/workflows/: ci.yml
docs/: architecture.md
memory_system/: __init__.py  cli.py
memory_system/api/: __init__.py  app.py  container.py  dependencies.py  middleware.py  schemas.py
memory_system/api/routes/: __init__  __init__.py  admin.py  health.py  memory.py
memory_system/config/: __init__.py  settings.py
memory_system/core/: __init__.py  embedding.py  enhanced_store.py  index.py  store.py  vector_store.py
memory_system/utils/: __init__.py  cache.py  db.py  exceptions.py  metrics.py  security.py
src/: __init__.py  main.py
src/memory/: memory_manager.py  storage.py
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_core.py  test_integration.py  test_performance.py  test_utils.py
